@@ -1,6 +1,9 @@
 jsoup changelog
 
 *** Release 0.3.2 (pending)
+ * Added selector support for :eq, :lt, and :gt
+ 	<http://github.com/jhy/jsoup/issues/issue/16>
+
  * Added TextNode#text and TextNode#text(String)
  	<http://github.com/jhy/jsoup/issues/issue/18>
 
